--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,11 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+upload_port = COM3
 lib_deps = 
 	https://github.com/johnrickman/LiquidCrystal_I2C
 	bluedot-arduino/BlueDot BME280 Library@^1.0.9
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.18.1
+	arduino-libraries/NTPClient @ ^3.2.1
 	; https://github.com/joellehmann/dtprovision
